# dv-flow-libfusesoc

./: .buildinfo  .envrc  CONTRIBUTING.md  README.md  changelog.html  edalize_integration.html  fusesoc_integration.html  genindex.html  getting_started.html  index.html  ivpm.yaml  modules.html  objects.inv  py-modindex.html  pyproject.toml  quick_reference.html  search.html  searchindex.js  tasks.html  usage_examples.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/dv_flow/libfusesoc/: edalize_backend.html  edalize_sim.html  edam_builder.html  fusesoc_core_resolve.html  fusesoc_fileset.html  fusesoc_manager.html
_sources/: changelog.rst.txt  edalize_integration.rst.txt  getting_started.rst.txt  tasks.rst.txt  usage_examples.rst.txt
docs/: conf.py  fusesoc_integration.rst  index.rst  modules.rst  quick_reference.rst
src/dv_flow/libfusesoc/: __ext__.py  __init__.py  edalize_backend.py  edalize_sim.py  edam_builder.py  flow.dv  fpga_flow.dv  fusesoc_core_resolve.py  fusesoc_fileset.py  fusesoc_manager.py  lint_flow.dv  sim_flow.dv
tests/: conftest.py
tests/fixtures/test_cores/: simple.core  simple.v  simple_tb.v
tests/integration/: test_core_resolution.py  test_edalize_sim.py
tests/unit/: test_edalize_tasks.py  test_edam_builder.py  test_extension.py  test_fusesoc_fileset.py  test_fusesoc_manager.py  test_fusesoc_tasks.py
